--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -94,7 +94,35 @@
     </div>
     <!-- FOOTER -->
     <footer>
-        &copy; 2025 SMKN Budi Pelita Bangsa — All Rights Reserved.
+        <div class="upper-footer">
+            <section class="footer-items">
+                <h2 class="header-footer">SMK Pelita Bangsa</h2>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </section>
+    
+            <section class="footer-items">
+                <h3 class="header-footer">Quick Links</h3>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../pages/register.html">Registrasi</a></li>
+                    <li><a href="../pages/kurikulum.html">Kurikulum</a></li>
+                    <li><a href="../pages/documentation.html">Dokumentasi</a></li>
+                </ul>
+            </section>
+    
+            <section class="footer-items">
+                <h3 class="header-footer">Follow Us</h3>
+                <ul class="social-media">
+                    <li><i class="lni lni-facebook"></i></li>
+                    <li><i class="lni lni-instagram"></i></li>
+                    <li><i class="lni lni-x"></i></li>
+                </ul>
+            </section>
+        </div>
+
+        <section class="copyright-section">
+            <p>&copy; 2025 SMK Pelita Bangsa. All rights reserved.</p>
+        </section>
     </footer>
 
 </body>
