fix: modified link href css file index.html,register.html,kurikulum.html,documentation.html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="logo">SMKN Budi Pelita Bangsa</div>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../pages/register.html">Registrasi</a></li>
-                    <li><a href="../pages/kurikulum.html">Kurikulum</a></li>
-                    <li><a href="../pages/documentation.html">Dokumentasi</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pages/register.html">Registrasi</a></li>
+                    <li><a href="pages/kurikulum.html">Kurikulum</a></li>
+                    <li><a href="pages/documentation.html">Dokumentasi</a></li>
                 </ul>
             </nav>
         </div>
@@ -71,10 +71,10 @@
             <section class="footer-items">
                 <h3 class="header-footer">Quick Links</h3>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../pages/register.html">Registrasi</a></li>
-                    <li><a href="../pages/kurikulum.html">Kurikulum</a></li>
-                    <li><a href="../pages/documentation.html">Dokumentasi</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pages/register.html">Registrasi</a></li>
+                    <li><a href="pages/kurikulum.html">Kurikulum</a></li>
+                    <li><a href="pages/documentation.html">Dokumentasi</a></li>
                 </ul>
             </section>
     
