--- a/pages/kurikulum.html
+++ b/pages/kurikulum.html
@@ -16,7 +16,7 @@
         <nav>
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../pages/registrasi.html">Registrasi</a></li>
+            <li><a href="../pages/register.html">Registrasi</a></li>
             <li><a href="../pages/kurikulum.html">Kurikulum</a></li>
             <li><a href="../pages/documentation.html">Dokumentasi</a></li>
           </ul>
