--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokumentasi Jurusan | SMKN Budi Pelita Bangsa</title>
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/documentation.css">
+    <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/documentation.css">
 </head>
 
 <body>
@@ -67,30 +67,30 @@
 
     <h2 id="ti" class="judul-section">Dokumentasi Teknik Informatika</h2>
     <div class="foto-grid">
-        <img src="/assets/documentation/tekinf/ti1.jpg" alt="">
-        <img src="/assets/documentation/tekinf/ti2.jpg" alt="">
-        <img src="/assets/documentation/tekinf/ti3.jpg" alt="">
+        <img src="../assets/documentation/dega/de1.jpg" alt="">
+        <img src="../assets/documentation/tekinf/ti2.jpg" alt="">
+        <img src="../assets/documentation/tekinf/ti3.jpg" alt="">
     </div>
 
     <h2 id="tb" class="judul-section">Dokumentasi Tata Boga</h2>
     <div class="foto-grid">
-        <img src="/assets/documentation/tabo/tbo1.jpg" alt="">
-        <img src="/assets/documentation/tabo/tbo2.jpg" alt="">
-        <img src="/assets/documentation/tabo/tbo3.jpg" alt="">
+        <img src="../assets/documentation/tabo/tbo1.jpg" alt="">
+        <img src="../assets/documentation/tabo/tbo2.jpg" alt="">
+        <img src="../assets/documentation/tabo/tbo3.jpg" alt="">
     </div>
 
     <h2 id="dg" class="judul-section">Dokumentasi Desain Grafis</h2>
     <div class="foto-grid">
-        <img src="/assets/documentation/dega/de1.jpg" alt="">
-        <img src="/assets/documentation/dega/de2.jpg" alt="">
-        <img src="/assets/documentation/dega/de3.jpg" alt="">
+        <img src="../assets/documentation/dega/de1.jpg" alt="">
+        <img src="../assets/documentation/dega/de2.jpg" alt="">
+        <img src="../assets/documentation/dega/de3.jpg" alt="">
     </div>
 
     <h2 id="sm" class="judul-section">Dokumentasi Seni Musik</h2>
     <div class="foto-grid">
-        <img src="/assets/documentation/semu/sm1.jpg" alt="">
-        <img src="/assets/documentation/semu/sm2.jpg" alt="">
-        <img src="/assets/documentation/semu/sm3.jpeg" alt="">
+        <img src="../assets/documentation/semu/sm1.jpg" alt="">
+        <img src="../assets/documentation/semu/sm2.jpg" alt="">
+        <img src="../assets/documentation/semu/sm3.jpeg" alt="">
     </div>
     <!-- FOOTER -->
     <footer>
