--- a/pages/register.html
+++ b/pages/register.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrasi Form</title>
 
-    <link rel="stylesheet" href="/css/register.css">
-    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="../css/global.css">
 </head>
 
 <body>
