fix: modified link in footer kurikulm.html

--- a/pages/kurikulum.html
+++ b/pages/kurikulum.html
@@ -108,10 +108,10 @@
         <section class="footer-items">
           <h3 class="header-footer">Quick Links</h3>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="./pages/kurikulum.html">Kurikulum</a></li>
-            <li><a href="./pages/register.html">Pendaftaran</a></li>
-            <li><a href="./pages/documentation.html">Dokumentasi</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../pages/kurikulum.html">Kurikulum</a></li>
+            <li><a href="../pages/register.html">Pendaftaran</a></li>
+            <li><a href="../pages/documentation.html">Dokumentasi</a></li>
           </ul>
         </section>
 
